ch2:基础数据类型学习笔记

--- a/ch2/2.3/2.3.3.md
+++ b/ch2/2.3/2.3.3.md
@@ -1,1 +1,15 @@
-2.3.2.md
+# 字符串
+>typeof s 返回的是字符串,其中+是字符串的拼接操作,所以一定要确保两边都是相同的数字或者字符串
+
+## 字符串转换
+1. 数字字符串在算术运算中,会自动转化为数字
+1. 如果操作失败,会产生NaN值
+1. 将空字符串和其他类型相加就可以转为字符串
+
+
+## 特殊字符串
+1. \  转义字符
+1. \n 换行符
+1. \s 回车符
+1. \t 制表符
+1. \u Unicode码
