--- a/ch2/2.6/2.6.1.md
+++ b/ch2/2.6/2.6.1.md
@@ -1,1 +1,21 @@
-2
+# 代码块
+>条件表达式可以帮助我们控制执行走向,循环可以让我们重复执行某段代码的操作
+
+
+> shift+enter可以在控制台输入多行代码
+
+# if语句
+> 括号里面条件主要为
+
+   * 逻辑操作
+   * 比较操作
+   * 能转换为布尔值的值或者变量
+   
+# 检查变量是否存在
+   * if(typeof somevar !=='undefined'),检查变量未定义,或者未被初始化
+
+# 替代if表达式
+   * 使用三元运算符来进行赋值
+
+# switch语句
+    如果使用了太多else if字句,可以考虑使用switch来替代
