ch3:函数调用,定义,闭包等概念

--- a/ch3/3.2/3.2.1.md
+++ b/ch3/3.2/3.2.1.md
@@ -1,1 +1,5 @@
-3.1.1.md
+# parseInt(arg1,arg2)
+> arg1:会将任何值转换为整数类型输出,如果失败,返回NaN
+> arg2:16,8可以设置数字进制类型,就会认为传入的arg1的进制
+> 如果数字以0x,或者0开头,则自动认为为16进制或者8进制.radix:进制
+> 不支持指数形式
