--- a/ch3/3.2/3.2.5.md
+++ b/ch3/3.2/3.2.5.md
@@ -1,1 +1,3 @@
-3.1.1.md
+# URI的编码和反编码
+   * encodeURI(url):转义并且返回一个整的可用的url.decodeURI()
+   * encodeURIComponent(url):转义并且返回用于url的一部分的转义字符串.decodeURIComponent()
